--- a/old/fig10_analisis_RM copy.ipynb
+++ b/old/fig10_analisis_RM copy.ipynb
@@ -23,15 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df2 = duckdb.sql(\"\"\"\n",
-    "# select distinct\n",
-    "#     GLOSATIPOESTABLECIMIENTO\n",
-    "# FROM datos_urgencia_consolidados.parquet\n",
-    "# \"\"\").df()\n",
-    "# df2\n",
     "periodo = 365\n",
     "USE_CUMSUM = True\n",
-    "year_list = ['2017','2018','2019','2022','2023']"
+    "year_list = ['2017','2018','2019','2022','2023']\n",
+    "#year_list_str = '(2017,2018,2019)'\n",
+    "year_list_str = '(2017,2018,2019,2022,2023)'\n",
+    "#year_list_str = '(2022,2023)'"
    ]
   },
   {
@@ -51,11 +48,7 @@
     "and CodigoRegion is not null\n",
     "--and GLOSATIPOESTABLECIMIENTO = 'Hospital'\n",
     "--and CodigoRegion = 13\n",
-    "and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019)\n",
-    "--and year(strptime(fecha, '%d/%m/%Y')) in (2022,2023)\n",
-    "--group by CodigoRegion, dayofyear(strptime(fecha, '%d/%m/%Y'))\n",
-    "--group by CodigoRegion, fecha\n",
+    "and year(strptime(fecha, '%d/%m/%Y')) in \"\"\" + year_list_str + \"\"\"\n",
     "group by CodigoDependencia, fecha, TipoEstablecimiento\n",
     "\"\"\" + \"\"\"\n",
     "having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
