--- a/table2_analisis_SVM_grupos_etarios.ipynb
+++ b/table2_analisis_SVM_grupos_etarios.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0301f8df",
+   "metadata": {},
+   "source": [
+    "## Reporte: Comparación de variables en poblaciones pediátricas y no pediátricas\n",
+    "\n",
+    "Los archivos en esta carpeta permiten generar las ilustraciones y tablas asociados al reporte *Comparación de variables en poblaciones pediátricas y no pediátricas* realizado en el marco del proyecto FONDEF ID23I10423 \n",
+    "*Sistema informático en base a inteligencia artificial para predecir peak de hospitalizaciones pediátricas por causas respiratorias*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "61de1472",
@@ -10,10 +21,7 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
-    "#import matplotlib.pyplot as plt\n",
     "import duckdb\n",
-    "#from mpl_toolkits import mplot3d \n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# Dividing dataset into training and testing dataset and standarized the features\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -33,65 +41,7 @@
     "periodo = 365\n",
     "USE_CUMSUM = True\n",
     "grupo_etario_list=[\"Menores_1\",\"De_1_a_4\",\"De_5_a_14\",\"De_15_a_64\",\"De_65_y_mas\"]\n",
-    "grupo_etario_legend=[\"Menores 1\",\"De 1 a 4\",\"De 5 a 14\",\"De 15 a 64\",\"De 65 y mas\"]\n",
-    "#grupos_etarios = [\"Menores_1\",\"De_1_a_4\",\"De_5_a_14\",\"De_15_a_64\",\"De_65_y_mas\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f37f8adf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# common_filter = \"\"\"\n",
-    "# FROM datos_urgencia_consolidados.parquet\n",
-    "# where IdCausa in (3,4,5,6,10,11)\n",
-    "# and CodigoDependencia is not null\n",
-    "# --and GLOSATIPOESTABLECIMIENTO = 'Hospital'\n",
-    "# and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
-    "# group by CodigoDependencia, fecha\n",
-    "# \"\"\" + \"\"\"\n",
-    "# having dayofyear(strptime(fecha, '%d/%m/%Y')) <= \"\"\"+ str(periodo) + \"\"\"\n",
-    "# \"\"\"\n",
-    "\n",
-    "# df2 = duckdb.sql(\"\"\"\n",
-    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "#     , CodigoDependencia  as CodigoRegion\n",
-    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "#     , 'Menores_1' as grupo_etario\n",
-    "#     , sum(Menores_1) as atenciones\n",
-    "# \"\"\"+ common_filter + \"\"\"\n",
-    "# UNION\n",
-    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "#     , CodigoDependencia  as CodigoRegion\n",
-    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "#     ,'De_1_a_4' as grupo_etario\n",
-    "#     , sum(De_1_a_4) as atenciones\n",
-    "# \"\"\"+ common_filter + \"\"\"\n",
-    "# UNION\n",
-    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "#     , CodigoDependencia  as CodigoRegion\n",
-    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "#     , 'De_5_a_14' as grupo_etario\n",
-    "#     , sum(De_5_a_14) as atenciones\n",
-    "# \"\"\"+ common_filter + \"\"\"\n",
-    "# UNION\n",
-    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "#     , CodigoDependencia  as CodigoRegion\n",
-    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "#     , 'De_15_a_64'  as grupo_etario\n",
-    "#     , sum(De_15_a_64) as atenciones\n",
-    "# \"\"\"+ common_filter + \"\"\"\n",
-    "# UNION\n",
-    "# select year(strptime(fecha, '%d/%m/%Y')) as year\n",
-    "#     , CodigoDependencia  as CodigoRegion\n",
-    "#     , dayofyear(strptime(fecha, '%d/%m/%Y')) as nrodia\n",
-    "#     , 'De_65_y_mas' as grupo_etario\n",
-    "#     , sum(De_65_y_mas) as atenciones\n",
-    "# \"\"\"+ common_filter + \"\"\"\n",
-    "# \"\"\").df()\n",
-    "\n"
+    "grupo_etario_legend=[\"Menores 1\",\"De 1 a 4\",\"De 5 a 14\",\"De 15 a 64\",\"De 65 y mas\"]"
    ]
   },
   {
@@ -101,11 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read data from parquet file\n",
-    "#number of days from the beginning of the year to consider in the analysis\n",
     "\n",
     "query_list = []\n",
-    "\n",
     "for k, gr_etario in enumerate(grupo_etario_list):\n",
     "    query_list.append(\"\"\"\n",
     "select year(strptime(fecha, '%d/%m/%Y')) as year\n",
@@ -123,7 +70,6 @@
     "        query_list.append(\"\"\" UNION \"\"\")\n",
     "\n",
     "df2 = duckdb.sql(''.join(query_list)).df()\n",
-    "\n",
     "\n",
     "df2 = df2.sort_values(by=['year','CodigoRegion','grupo_etario','nrodia']).reset_index(drop = True)"
    ]
@@ -159,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#analisis PCA\n",
+    "## analisis PCA\n",
     "# Separating out the features\n",
     "x_original = df3.loc[:, [k+1 for k in range(periodo)]].values\n",
     "\n",
@@ -287,7 +233,6 @@
     "    for group_indices in [[0], [1], [2], [3], [4], [0,1], [0,2], [0,3], [0,4], [1,2], [1,3], [1,4],[2,3],[2,4],[3,4]]:\n",
     "        # Declare the group we are trying to separate\n",
     "        targets = []\n",
-    "        #for ind in set([0,1,2,3,4]) - set(group_indices):\n",
     "        for ind in group_indices:\n",
     "            if len(targets) == 0:\n",
     "                targets = (finalDf[[\"grupo_etario\"]]==grupo_etario_list[ind]).values.ravel()\n",
@@ -297,7 +242,6 @@
     "        X, y = finalDf[[\"PC1\",\"PC2\",\"PC3\"]].values , targets \n",
     "        # Split the dataset into a training and a testing set(20 percent)\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=1)\n",
-    "        #print (\"\\nTesting Dataset Shape:\", X_train.shape, y_train.shape)\n",
     "        \n",
     "        # Standarize the features\n",
     "        scaler = StandardScaler().fit(X_train)\n",
@@ -318,7 +262,7 @@
     "        else:\n",
     "            resultados[iter, group_indices[0],group_indices[1]] = precision_clasificador\n",
     "            resultados[iter, group_indices[1],group_indices[0]] = resultados[iter,group_indices[0],group_indices[1]]\n",
-    "#resultados.mean(0)\n",
+    "\n",
     "pd.DataFrame(resultados.mean(0),columns=grupo_etario_legend, index = grupo_etario_legend)\n",
     "\n"
    ]
